fixed footer bug covering page content

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,7 @@ button {
 }
 
 footer {
-    position: absolute;
+    position: static;
     bottom: 0;
     width: 100%;
     height: auto;
